slight css update

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -2,6 +2,7 @@ body {
     background-image: url("canvas.png");
     background-attachment: fixed;
     background-color: #dbeaef;
+    background-size: cover;
     padding: 0px;
     margin: 0px;
 }
